--- a/app/views/posts/_post_data.html.haml
+++ b/app/views/posts/_post_data.html.haml
@@ -17,11 +17,17 @@
 	%p
 	.show_hide_wrapper
 		%button.rounded.show_hide{data: {post: post.id} }
-			- if !post.video.blank? || !post.vembed.blank?
+			- if post.filter_list == ["video"]
 				Watch Video
-			- elsif !post.content.blank?
+			- elsif post.filter_list == ["written"]
 				Read More
-			- elsif !post.image.blank?
+			- elsif post.filter_list == ["image"]
 				View Image
+			- elsif post.filter_list == ["twitter"]
+				View Tweet
+			- elsif post.filter_list == ["audio"]
+				Listen
+			- else
+				More
 			
 	.clear
