more capatilization in the form saving

--- a/app/views/posts/_thumbnail.html.haml
+++ b/app/views/posts/_thumbnail.html.haml
@@ -1,10 +1,10 @@
-- if post.filter_list == ["video"] || ["Video"]
+- if post.filter_list == ["Video"]
 	=image_tag "video_icon.png"
-- elsif post.filter_list == ["written"] || ["Written"]
+- elsif post.filter_list == ["Written"]
 	=image_tag "text_icon.png"
-- elsif post.filter_list == ["image"] || ["Image"]
+- elsif post.filter_list == ["Image"]
 	=image_tag "image_icon.png"
-- elsif post.filter_list == ["audio"] || ["Audio"]
+- elsif post.filter_list == ["Audio"]
 	=image_tag "audio.png"
-- elsif post.filter_list == ["twitter"] || ["Twitter"]
+- elsif post.filter_list == ["Twitter"]
 	=image_tag "tweet.png"
