twitter to lowercase on filter

--- a/app/views/posts/_post_data.html.haml
+++ b/app/views/posts/_post_data.html.haml
@@ -23,7 +23,7 @@
 				Read More
 			- elsif post.filter_list == ["Image"]
 				View Image
-			- elsif post.filter_list == ["Twitter"]
+			- elsif post.filter_list == ["twitter"]
 				View Tweet
 			- elsif post.filter_list == ["Audio"]
 				Listen
