--- a/app/views/posts/_thumbnail.html.haml
+++ b/app/views/posts/_thumbnail.html.haml
@@ -6,5 +6,5 @@
 	=image_tag "image_icon.png"
 - elsif post.filter_list == ["Audio"]
 	=image_tag "audio.png"
-- elsif post.filter_list == ["Twitter"]
+- elsif post.filter_list == ["twitter"]
 	=image_tag "tweet.png"
