changing formating on the heart and share button

--- a/app/views/posts/_addthis.html.erb
+++ b/app/views/posts/_addthis.html.erb
@@ -3,7 +3,7 @@
 	addthis:url="http://www.hehemachine.com/posts/<%=post.slug%>"
     addthis:title="<%= post.title %>"
     addthis:description="<%= post.teaser %>"
-	style="float:right;">
+	style="float:right;width: 70%;">
 <a class="addthis_button_facebook"></a>
 <a class="addthis_button_twitter"></a>
 <a class="addthis_button_email"></a>
